# kduc

./: CMakeLists.txt  CONTRIBUTING.txt  README.md
.github/workflows/: main.yml
src/main/cpp/: kduc.cpp  kduc.h
src/test/c/: test_decoder.c  test_decoder_yuv.c  test_encoder.c  test_encoder_12.c  test_encoder_16.c  test_encoder_yuv.c  test_interface.c
src/test/cpp/: test_cpp_encoder.cpp  test_decoder.cpp
src/test/resources/: counter-00000.j2c  test.yuv.j2c
